--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "docx": "^8.5.0",
     "express": "^4.21.2",
