--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "multer": "^2.0.2",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "vercel": "^50.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
